Fix letter filter not visible mobile

--- a/assets/styles/components/_letter-filter.scss
+++ b/assets/styles/components/_letter-filter.scss
@@ -3,12 +3,8 @@
 @use 'sassy-scss/mixins' as sassy-mx;
 
 .c-letter-filter {
-	display: var(--display, none);
+	display: var(--display);
 	margin: 0 0 vars.$spacer * 1.5 0;
-
-	@include mx.breakpoint('sm') {
-		--display: block;
-	}
 
 	&__list {
 		display: grid;
@@ -50,9 +46,15 @@
 		}
 	}
 
+	&--mobile {
+		--display: block;
+	}
+
 	&--desktop {
-		@include mx.breakpoint('sm', 'max') {
-			display: none;
+		--display: none;
+
+		@include mx.breakpoint('sm') {
+			--display: block;
 		}
 	}
 }
